# framework.appfw.notification-parser

./: CMakeLists.txt  notification-parser.manifest  notification-parser.pc.in
packaging/: notification-parser.spec
src/: notification_register.c
